Updated path to raw data. Updated write_csv function sep=','

--- a/Airbnb Raw Data Aggregation.ipynb
+++ b/Airbnb Raw Data Aggregation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "import glob\n",
     "\n",
     "#Set path to location of SF Airbnb raw data on local machine\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Raw Data\\SF Airbnb Raw Data/'"
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data/'"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "[5 rows x 106 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,15 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Set path to write df to csv\n",
-    "# path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Listings_Nov2018_Oct2019.csv'\n",
+    "#Set path to write df to csv\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_26_2019_Listings.csv'\n",
     "\n",
-    "# #Write to csv file\n",
-    "# listings.to_csv(path_to_file, sep='\\t')"
+    "#Write to csv file\n",
+    "listings.to_csv(path_to_file, sep=',')"
    ]
   },
   {
@@ -334,116 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reviews shape:  (430766, 6)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>comments</th>\n",
-       "      <th>date</th>\n",
-       "      <th>id</th>\n",
-       "      <th>listing_id</th>\n",
-       "      <th>reviewer_id</th>\n",
-       "      <th>reviewer_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Our experience was, without a doubt, a five st...</td>\n",
-       "      <td>2009-07-23</td>\n",
-       "      <td>5977</td>\n",
-       "      <td>958</td>\n",
-       "      <td>15695</td>\n",
-       "      <td>Edmund C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Returning to San Francisco is a rejuvenating t...</td>\n",
-       "      <td>2009-08-03</td>\n",
-       "      <td>6660</td>\n",
-       "      <td>958</td>\n",
-       "      <td>26145</td>\n",
-       "      <td>Simon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>We were very pleased with the accommodations a...</td>\n",
-       "      <td>2009-09-27</td>\n",
-       "      <td>11519</td>\n",
-       "      <td>958</td>\n",
-       "      <td>25839</td>\n",
-       "      <td>Denis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>We highly recommend this accomodation and agre...</td>\n",
-       "      <td>2009-11-05</td>\n",
-       "      <td>16282</td>\n",
-       "      <td>958</td>\n",
-       "      <td>33750</td>\n",
-       "      <td>Anna</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Holly's place was great. It was exactly what I...</td>\n",
-       "      <td>2010-02-13</td>\n",
-       "      <td>26008</td>\n",
-       "      <td>958</td>\n",
-       "      <td>15416</td>\n",
-       "      <td>Venetia</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            comments        date     id  \\\n",
-       "0  Our experience was, without a doubt, a five st...  2009-07-23   5977   \n",
-       "1  Returning to San Francisco is a rejuvenating t...  2009-08-03   6660   \n",
-       "2  We were very pleased with the accommodations a...  2009-09-27  11519   \n",
-       "3  We highly recommend this accomodation and agre...  2009-11-05  16282   \n",
-       "4  Holly's place was great. It was exactly what I...  2010-02-13  26008   \n",
-       "\n",
-       "   listing_id  reviewer_id reviewer_name  \n",
-       "0         958        15695      Edmund C  \n",
-       "1         958        26145         Simon  \n",
-       "2         958        25839         Denis  \n",
-       "3         958        33750          Anna  \n",
-       "4         958        15416       Venetia  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Capture reviews data\n",
     "all_files = glob.glob(path + \"reviews?*.gz\")\n",
@@ -471,15 +364,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Set path to write df to csv\n",
-    "# path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Reviews_Nov2018_Oct2019.csv'\n",
+    "#Set path to write df to csv\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_26_2019_Reviews.csv'\n",
     "\n",
-    "# #Write to csv file\n",
-    "# reviews.to_csv(path_to_file, sep='\\t')"
+    "#Write to csv file\n",
+    "reviews.to_csv(path_to_file, sep=',')"
    ]
   },
   {
@@ -491,122 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calendar shape:  (15901917, 7)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adjusted_price</th>\n",
-       "      <th>available</th>\n",
-       "      <th>date</th>\n",
-       "      <th>listing_id</th>\n",
-       "      <th>maximum_nights</th>\n",
-       "      <th>minimum_nights</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>$80.00</td>\n",
-       "      <td>f</td>\n",
-       "      <td>2019-04-03</td>\n",
-       "      <td>187730</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>$80.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>$80.00</td>\n",
-       "      <td>f</td>\n",
-       "      <td>2019-04-04</td>\n",
-       "      <td>187730</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>$80.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>$82.00</td>\n",
-       "      <td>t</td>\n",
-       "      <td>2019-04-05</td>\n",
-       "      <td>187730</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>$82.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>$82.00</td>\n",
-       "      <td>t</td>\n",
-       "      <td>2019-04-06</td>\n",
-       "      <td>187730</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>$82.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>$81.00</td>\n",
-       "      <td>t</td>\n",
-       "      <td>2019-04-07</td>\n",
-       "      <td>187730</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>$81.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  adjusted_price available        date  listing_id  maximum_nights  \\\n",
-       "0         $80.00         f  2019-04-03      187730           120.0   \n",
-       "1         $80.00         f  2019-04-04      187730           120.0   \n",
-       "2         $82.00         t  2019-04-05      187730           120.0   \n",
-       "3         $82.00         t  2019-04-06      187730           120.0   \n",
-       "4         $81.00         t  2019-04-07      187730           120.0   \n",
-       "\n",
-       "   minimum_nights   price  \n",
-       "0             3.0  $80.00  \n",
-       "1             3.0  $80.00  \n",
-       "2             3.0  $82.00  \n",
-       "3             3.0  $82.00  \n",
-       "4             3.0  $81.00  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Capture calendar data\n",
     "all_files = glob.glob(path + \"calendar?*.gz\")\n",
@@ -634,15 +414,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Set path to write df to csv\n",
-    "# path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_calendar_Nov2018_Oct2019.csv'\n",
+    "#Set path to write df to csv\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_26_2019_Calendar.csv'\n",
     "\n",
-    "# #Write to csv file\n",
-    "# calendar.to_csv(path_to_file, sep='\\t')"
+    "#Write to csv file\n",
+    "calendar.to_csv(path_to_file, sep=',')"
    ]
   }
  ],
