--- a/Project Codes/Airbnb Raw Data Aggregation.ipynb
+++ b/Project Codes/Airbnb Raw Data Aggregation.ipynb
@@ -334,9 +334,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reviews shape:  (430766, 6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comments</th>\n",
+       "      <th>date</th>\n",
+       "      <th>id</th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>reviewer_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Our experience was, without a doubt, a five st...</td>\n",
+       "      <td>2009-07-23</td>\n",
+       "      <td>5977</td>\n",
+       "      <td>958</td>\n",
+       "      <td>15695</td>\n",
+       "      <td>Edmund C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Returning to San Francisco is a rejuvenating t...</td>\n",
+       "      <td>2009-08-03</td>\n",
+       "      <td>6660</td>\n",
+       "      <td>958</td>\n",
+       "      <td>26145</td>\n",
+       "      <td>Simon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>We were very pleased with the accommodations a...</td>\n",
+       "      <td>2009-09-27</td>\n",
+       "      <td>11519</td>\n",
+       "      <td>958</td>\n",
+       "      <td>25839</td>\n",
+       "      <td>Denis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>We highly recommend this accomodation and agre...</td>\n",
+       "      <td>2009-11-05</td>\n",
+       "      <td>16282</td>\n",
+       "      <td>958</td>\n",
+       "      <td>33750</td>\n",
+       "      <td>Anna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Holly's place was great. It was exactly what I...</td>\n",
+       "      <td>2010-02-13</td>\n",
+       "      <td>26008</td>\n",
+       "      <td>958</td>\n",
+       "      <td>15416</td>\n",
+       "      <td>Venetia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            comments        date     id  \\\n",
+       "0  Our experience was, without a doubt, a five st...  2009-07-23   5977   \n",
+       "1  Returning to San Francisco is a rejuvenating t...  2009-08-03   6660   \n",
+       "2  We were very pleased with the accommodations a...  2009-09-27  11519   \n",
+       "3  We highly recommend this accomodation and agre...  2009-11-05  16282   \n",
+       "4  Holly's place was great. It was exactly what I...  2010-02-13  26008   \n",
+       "\n",
+       "   listing_id  reviewer_id reviewer_name  \n",
+       "0         958        15695      Edmund C  \n",
+       "1         958        26145         Simon  \n",
+       "2         958        25839         Denis  \n",
+       "3         958        33750          Anna  \n",
+       "4         958        15416       Venetia  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Capture reviews data\n",
     "all_files = glob.glob(path + \"reviews?*.gz\")\n",
@@ -364,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,9 +491,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calendar shape:  (15901917, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adjusted_price</th>\n",
+       "      <th>available</th>\n",
+       "      <th>date</th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>maximum_nights</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$80.00</td>\n",
+       "      <td>f</td>\n",
+       "      <td>2019-04-03</td>\n",
+       "      <td>187730</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>$80.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$80.00</td>\n",
+       "      <td>f</td>\n",
+       "      <td>2019-04-04</td>\n",
+       "      <td>187730</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>$80.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>$82.00</td>\n",
+       "      <td>t</td>\n",
+       "      <td>2019-04-05</td>\n",
+       "      <td>187730</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>$82.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>$82.00</td>\n",
+       "      <td>t</td>\n",
+       "      <td>2019-04-06</td>\n",
+       "      <td>187730</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>$82.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>$81.00</td>\n",
+       "      <td>t</td>\n",
+       "      <td>2019-04-07</td>\n",
+       "      <td>187730</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>$81.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  adjusted_price available        date  listing_id  maximum_nights  \\\n",
+       "0         $80.00         f  2019-04-03      187730           120.0   \n",
+       "1         $80.00         f  2019-04-04      187730           120.0   \n",
+       "2         $82.00         t  2019-04-05      187730           120.0   \n",
+       "3         $82.00         t  2019-04-06      187730           120.0   \n",
+       "4         $81.00         t  2019-04-07      187730           120.0   \n",
+       "\n",
+       "   minimum_nights   price  \n",
+       "0             3.0  $80.00  \n",
+       "1             3.0  $80.00  \n",
+       "2             3.0  $82.00  \n",
+       "3             3.0  $82.00  \n",
+       "4             3.0  $81.00  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Capture calendar data\n",
     "all_files = glob.glob(path + \"calendar?*.gz\")\n",
@@ -414,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
