--- a/Project Codes/02.Data Cleaning Scripts/12_27_2019_Listings_Cleaning.ipynb
+++ b/Project Codes/02.Data Cleaning Scripts/12_27_2019_Listings_Cleaning.ipynb
@@ -38,8 +38,7 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
