renamed:    Airbnb Reviews Data Cleaning.ipynb -> 12_27_2019_Reviews_Cleaning.ipynb// Updated libraries

--- a/Project Codes/02.Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
+++ b/Project Codes/02.Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#supress future warnings\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
-    "\n",
-    "#Set plot aesthetics for notebook\n",
-    "sns.set(style='whitegrid', palette='pastel', color_codes=True)\n",
     "\n",
     "#Increase number of columns and rows displayed by Pandas\n",
     "pd.set_option('display.max_columns', 100)\n",
@@ -79,18 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set path to get aggregated Calendar data\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Reviews_Nov2018_Oct2019.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_26_2019_Reviews.csv'\n",
     "\n",
     "#Parse dates\n",
     "parse_dates = ['date']\n",
     "\n",
     "#Read in Airbnb Review Data\n",
-    "reviews = pd.read_csv(path, sep='\\t', parse_dates=parse_dates,index_col=0)\n"
+    "reviews = pd.read_csv(path, sep=',', parse_dates=parse_dates,index_col=0)\n"
    ]
   },
   {
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,15 +279,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Set path to write listings\n",
-    "# path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\12_24_2019_reviews_cleaned.csv'\n",
+    "#Set path to write listings\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\12_24_2019_Reviews_Cleaned.csv'\n",
     "\n",
-    "# #Write listings to path\n",
-    "# reviews.to_csv(path)"
+    "#Write listings to path\n",
+    "reviews.to_csv(path, sep=',')"
    ]
   }
  ],
