Updated path and libraries//renamed:    Zillow Data Cleaning.ipynb -> 12_27_2019_Zillow_Cleaning.ipynb

--- a/Project Codes/02.Data Cleaning Scripts/12_27_2019_Zillow_Cleaning.ipynb
+++ b/Project Codes/02.Data Cleaning Scripts/12_27_2019_Zillow_Cleaning.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Original name of this file it Zip_MedianRentalPricePerSqft_AllHomes.csv"
+    "In the following notebook, I will be cleaning data from [Zillow](https://www.zillow.com/research/data/). This data will be used to supplement my analysis of the Airbnb listings in the San Francisco Area.\n",
+    "\n",
+    "I intend to use this data to compare the cost of rent in SF to the cost of renting an average Airbnb for a month."
    ]
   },
   {
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,10 +40,7 @@
     "import re\n",
     "\n",
     "import numpy as np\n",
-    "from scipy import stats\n",
-    "\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "from scipy import stats"
    ]
   },
   {
@@ -53,13 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Set plot aesthetics for notebook\n",
-    "sns.set(style='whitegrid', palette='pastel', color_codes=True)\n",
-    "\n",
     "#Increase number of columns and rows displayed by Pandas\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.max_rows',100)\n",
@@ -77,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set path to Zillow Data\n",
-    "path = r'Data\\01_Raw\\Zillow Raw Data\\Zip_MedianRentalPricePerSqft_AllHomes.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\Zillow Raw Data\\Zip_MedianRentalPricePerSqft_AllHomes.csv'\n",
     "\n",
     "#Read in Zillow data\n",
     "zillow = pd.read_csv(path, header=1)"
@@ -97,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1096,7 @@
        "4  0.840685583105551  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1352,15 +1348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set path to export cleaned zillow data\n",
-    "path = r'Data\\02_Intermediate\\12_23_2019_zillow_cleaned.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\12_23_2019_Zillow_cleaned.csv'\n",
     "\n",
     "#Write file\n",
-    "zillow.to_csv(path)"
+    "zillow.to_csv(path, sep=',')"
    ]
   }
  ],
