--- a/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
@@ -13,9 +13,11 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In the following notebook, I will be cleaning data from [Zillow](https://www.zillow.com/research/data/). This data will be used to supplement my analysis of the Airbnb listings in the San Francisco Area.\n",
+    "In the following notebook, I will be cleaning an aggregation of Zillow Median Rent across the United States. This aggregation consists of reviews data from 03/2010 through 11/2019.\n",
     "\n",
-    "I intend to use this data to compare the cost of rent in SF to the cost of renting an average Airbnb for a month."
+    "The aggregation source code can be found [here]()\n",
+    "\n",
+    "Raw data can be found here"
    ]
   },
   {
