--- a/Project Codes/01. Raw Data Aggregation Scripts/12_28_2019_Zillow_Raw_Data_Aggregation.ipynb
+++ b/Project Codes/01. Raw Data Aggregation Scripts/12_28_2019_Zillow_Raw_Data_Aggregation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3635,15 +3635,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Assign beds column to differentiate data downstream\n",
-    "one_br['beds'] = 1\n",
-    "two_br['beds'] = 2\n",
-    "three_br['beds'] = 3\n",
-    "four_br['beds'] = 4"
+    "one_br['Beds'] = 1\n",
+    "two_br['Beds'] = 2\n",
+    "three_br['Beds'] = 3\n",
+    "four_br['Beds'] = 4"
    ]
   },
   {
@@ -3655,7 +3655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3796,13 +3796,13 @@
        "      <th>2019-09</th>\n",
        "      <th>2019-10</th>\n",
        "      <th>2019-11</th>\n",
+       "      <th>Beds</th>\n",
        "      <th>City</th>\n",
        "      <th>CountyName</th>\n",
        "      <th>Metro</th>\n",
        "      <th>RegionName</th>\n",
        "      <th>SizeRank</th>\n",
        "      <th>State</th>\n",
-       "      <th>beds</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3925,13 +3925,13 @@
        "      <td>3050.0</td>\n",
        "      <td>3100.0</td>\n",
        "      <td>3156.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>New York</td>\n",
        "      <td>New York County</td>\n",
        "      <td>New York-Newark-Jersey City</td>\n",
        "      <td>10025</td>\n",
        "      <td>1</td>\n",
        "      <td>NY</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4052,13 +4052,13 @@
        "      <td>1425.0</td>\n",
        "      <td>1410.0</td>\n",
        "      <td>1400.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Chicago</td>\n",
        "      <td>Cook County</td>\n",
        "      <td>Chicago-Naperville-Elgin</td>\n",
        "      <td>60657</td>\n",
        "      <td>2</td>\n",
        "      <td>IL</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4179,13 +4179,13 @@
        "      <td>3350.0</td>\n",
        "      <td>3400.0</td>\n",
        "      <td>3391.5</td>\n",
+       "      <td>1</td>\n",
        "      <td>New York</td>\n",
        "      <td>New York County</td>\n",
        "      <td>New York-Newark-Jersey City</td>\n",
        "      <td>10023</td>\n",
        "      <td>3</td>\n",
        "      <td>NY</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -4306,13 +4306,13 @@
        "      <td>1169.0</td>\n",
        "      <td>1157.0</td>\n",
        "      <td>1127.5</td>\n",
+       "      <td>1</td>\n",
        "      <td>Katy</td>\n",
        "      <td>Harris County</td>\n",
        "      <td>Houston-The Woodlands-Sugar Land</td>\n",
        "      <td>77494</td>\n",
        "      <td>4</td>\n",
        "      <td>TX</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4433,13 +4433,13 @@
        "      <td>1670.0</td>\n",
        "      <td>1625.0</td>\n",
        "      <td>1600.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Chicago</td>\n",
        "      <td>Cook County</td>\n",
        "      <td>Chicago-Naperville-Elgin</td>\n",
        "      <td>60614</td>\n",
        "      <td>5</td>\n",
        "      <td>IL</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4544,19 +4544,26 @@
        "3   1213.0   1144.0   1159.0   1159.0   1155.0   1152.5   1194.0   1236.5   \n",
        "4   1520.0   1600.0   1650.0   1650.0   1695.0   1675.0   1700.0   1675.0   \n",
        "\n",
-       "   2019-07  2019-08  2019-09  2019-10  2019-11      City       CountyName  \\\n",
-       "0   3100.0   3100.0   3050.0   3100.0   3156.0  New York  New York County   \n",
-       "1   1452.5   1425.0   1425.0   1410.0   1400.0   Chicago      Cook County   \n",
-       "2   3297.5   3350.0   3350.0   3400.0   3391.5  New York  New York County   \n",
-       "3   1201.0   1206.0   1169.0   1157.0   1127.5      Katy    Harris County   \n",
-       "4   1720.0   1700.0   1670.0   1625.0   1600.0   Chicago      Cook County   \n",
+       "   2019-07  2019-08  2019-09  2019-10  2019-11  Beds      City  \\\n",
+       "0   3100.0   3100.0   3050.0   3100.0   3156.0     1  New York   \n",
+       "1   1452.5   1425.0   1425.0   1410.0   1400.0     1   Chicago   \n",
+       "2   3297.5   3350.0   3350.0   3400.0   3391.5     1  New York   \n",
+       "3   1201.0   1206.0   1169.0   1157.0   1127.5     1      Katy   \n",
+       "4   1720.0   1700.0   1670.0   1625.0   1600.0     1   Chicago   \n",
        "\n",
-       "                              Metro  RegionName  SizeRank State  beds  \n",
-       "0       New York-Newark-Jersey City       10025         1    NY     1  \n",
-       "1          Chicago-Naperville-Elgin       60657         2    IL     1  \n",
-       "2       New York-Newark-Jersey City       10023         3    NY     1  \n",
-       "3  Houston-The Woodlands-Sugar Land       77494         4    TX     1  \n",
-       "4          Chicago-Naperville-Elgin       60614         5    IL     1  "
+       "        CountyName                             Metro  RegionName  SizeRank  \\\n",
+       "0  New York County       New York-Newark-Jersey City       10025         1   \n",
+       "1      Cook County          Chicago-Naperville-Elgin       60657         2   \n",
+       "2  New York County       New York-Newark-Jersey City       10023         3   \n",
+       "3    Harris County  Houston-The Woodlands-Sugar Land       77494         4   \n",
+       "4      Cook County          Chicago-Naperville-Elgin       60614         5   \n",
+       "\n",
+       "  State  \n",
+       "0    NY  \n",
+       "1    IL  \n",
+       "2    NY  \n",
+       "3    TX  \n",
+       "4    IL  "
       ]
      },
      "metadata": {},
@@ -4580,7 +4587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
