--- a/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
        "4   1700.0   1675.0   1720.0   1700.0   1670.0   1625.0   1600.0  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
       " City              object\n",
       "County            object\n",
       "Metro             object\n",
-      "Zip                int64\n",
+      "Zip               object\n",
       "State             object\n",
       "SizeRank          object\n",
       "Bedrooms          object\n",
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1458,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Zip</th>\n",
        "      <th>Median_Rent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1466,41 +1465,33 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>257971.000000</td>\n",
-       "      <td>257971.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>48353.458075</td>\n",
        "      <td>1827.066172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>31669.157990</td>\n",
        "      <td>1489.317983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>1060.000000</td>\n",
        "      <td>350.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>21402.000000</td>\n",
        "      <td>1200.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>33908.000000</td>\n",
        "      <td>1570.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>78660.000000</td>\n",
        "      <td>2124.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>99705.000000</td>\n",
        "      <td>50000.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1508,15 +1499,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                 Zip    Median_Rent\n",
-       "count  257971.000000  257971.000000\n",
-       "mean    48353.458075    1827.066172\n",
-       "std     31669.157990    1489.317983\n",
-       "min      1060.000000     350.000000\n",
-       "25%     21402.000000    1200.000000\n",
-       "50%     33908.000000    1570.000000\n",
-       "75%     78660.000000    2124.000000\n",
-       "max     99705.000000   50000.000000"
+       "         Median_Rent\n",
+       "count  257971.000000\n",
+       "mean     1827.066172\n",
+       "std      1489.317983\n",
+       "min       350.000000\n",
+       "25%      1200.000000\n",
+       "50%      1570.000000\n",
+       "75%      2124.000000\n",
+       "max     50000.000000"
       ]
      },
      "metadata": {},
@@ -1530,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1538,8 +1529,7 @@
      "output_type": "stream",
      "text": [
       "Variance:\n",
-      " Zip            1.002936e+09\n",
-      "Median_Rent    2.218068e+06\n",
+      " Median_Rent    2.218068e+06\n",
       "dtype: float64\n"
      ]
     }
@@ -1558,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
