--- a/Project Codes/03. Exploratory Data Analysis/12_27_2019_EDA.ipynb
+++ b/Project Codes/03. Exploratory Data Analysis/12_27_2019_EDA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +97,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Read in Zillow data\n",
-    "zillow = pd.read_csv(path + '12_23_2019_Zillow_Cleaned.csv', index_col=0, sep=',')\n",
+    "zillow = pd.read_csv(path + '12_29_2019_Zillow_Cleaned.csv', index_col=0, sep=',')\n",
     "\n",
     "#Read in Airbnb Listings Data\n",
     "listings = pd.read_csv(path + '12_27_2019_Listings_Cleaned.csv',index_col=0, low_memory=False, sep=',')\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1034,55 +1034,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 317,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12647017, 7)"
-      ]
-     },
-     "execution_count": 317,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calendar.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 318,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12647017, 7)"
-      ]
-     },
-     "execution_count": 318,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calendar.drop_duplicates(inplace=True)\n",
-    "\n",
-    "calendar.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1091,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1115,90 +1066,103 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>RegionName</th>\n",
        "      <th>City</th>\n",
-       "      <th>State</th>\n",
+       "      <th>County</th>\n",
        "      <th>Metro</th>\n",
-       "      <th>CountyName</th>\n",
+       "      <th>Zip</th>\n",
+       "      <th>State</th>\n",
        "      <th>SizeRank</th>\n",
+       "      <th>Bedrooms</th>\n",
        "      <th>Date</th>\n",
-       "      <th>Price_SqrFt</th>\n",
+       "      <th>Median_Rent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10025</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>New York-Newark-Jersey City</td>\n",
-       "      <td>New York County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-02-01</td>\n",
-       "      <td>nan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10023</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>New York-Newark-Jersey City</td>\n",
-       "      <td>New York County</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2010-02-01</td>\n",
-       "      <td>nan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>77494</td>\n",
-       "      <td>Katy</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Houston-The Woodlands-Sugar Land</td>\n",
-       "      <td>Harris County</td>\n",
+       "      <th>4298</th>\n",
+       "      <td>Virginia Beach</td>\n",
+       "      <td>Virginia Beach City</td>\n",
+       "      <td>Virginia Beach-Norfolk-Newport News</td>\n",
+       "      <td>23462</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>83</td>\n",
        "      <td>3</td>\n",
-       "      <td>2010-02-01</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>2010-03</td>\n",
+       "      <td>1200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>77449</td>\n",
-       "      <td>Katy</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Houston-The Woodlands-Sugar Land</td>\n",
-       "      <td>Harris County</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2010-02-01</td>\n",
-       "      <td>nan</td>\n",
+       "      <th>10339</th>\n",
+       "      <td>Virginia Beach</td>\n",
+       "      <td>Virginia Beach City</td>\n",
+       "      <td>Virginia Beach-Norfolk-Newport News</td>\n",
+       "      <td>23462</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>83</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-04</td>\n",
+       "      <td>1250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>77084</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Houston-The Woodlands-Sugar Land</td>\n",
-       "      <td>Harris County</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2010-02-01</td>\n",
-       "      <td>nan</td>\n",
+       "      <th>16380</th>\n",
+       "      <td>Virginia Beach</td>\n",
+       "      <td>Virginia Beach City</td>\n",
+       "      <td>Virginia Beach-Norfolk-Newport News</td>\n",
+       "      <td>23462</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>83</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-05</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22421</th>\n",
+       "      <td>Virginia Beach</td>\n",
+       "      <td>Virginia Beach City</td>\n",
+       "      <td>Virginia Beach-Norfolk-Newport News</td>\n",
+       "      <td>23462</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>83</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-06</td>\n",
+       "      <td>1250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28462</th>\n",
+       "      <td>Virginia Beach</td>\n",
+       "      <td>Virginia Beach City</td>\n",
+       "      <td>Virginia Beach-Norfolk-Newport News</td>\n",
+       "      <td>23462</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>83</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-07</td>\n",
+       "      <td>1225</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   RegionName      City State                             Metro  \\\n",
-       "0       10025  New York    NY       New York-Newark-Jersey City   \n",
-       "1       10023  New York    NY       New York-Newark-Jersey City   \n",
-       "2       77494      Katy    TX  Houston-The Woodlands-Sugar Land   \n",
-       "3       77449      Katy    TX  Houston-The Woodlands-Sugar Land   \n",
-       "4       77084   Houston    TX  Houston-The Woodlands-Sugar Land   \n",
+       "                 City               County  \\\n",
+       "4298   Virginia Beach  Virginia Beach City   \n",
+       "10339  Virginia Beach  Virginia Beach City   \n",
+       "16380  Virginia Beach  Virginia Beach City   \n",
+       "22421  Virginia Beach  Virginia Beach City   \n",
+       "28462  Virginia Beach  Virginia Beach City   \n",
        "\n",
-       "        CountyName  SizeRank        Date  Price_SqrFt  \n",
-       "0  New York County         1  2010-02-01          nan  \n",
-       "1  New York County         2  2010-02-01          nan  \n",
-       "2    Harris County         3  2010-02-01          nan  \n",
-       "3    Harris County         4  2010-02-01          nan  \n",
-       "4    Harris County         5  2010-02-01          nan  "
+       "                                     Metro    Zip State  SizeRank  Bedrooms  \\\n",
+       "4298   Virginia Beach-Norfolk-Newport News  23462    VA        83         3   \n",
+       "10339  Virginia Beach-Norfolk-Newport News  23462    VA        83         3   \n",
+       "16380  Virginia Beach-Norfolk-Newport News  23462    VA        83         3   \n",
+       "22421  Virginia Beach-Norfolk-Newport News  23462    VA        83         3   \n",
+       "28462  Virginia Beach-Norfolk-Newport News  23462    VA        83         3   \n",
+       "\n",
+       "          Date  Median_Rent  \n",
+       "4298   2010-03         1200  \n",
+       "10339  2010-04         1250  \n",
+       "16380  2010-05         1200  \n",
+       "22421  2010-06         1250  \n",
+       "28462  2010-07         1225  "
       ]
      },
      "metadata": {},
